fix wrap around avatar

--- a/nextjs/components/Avatars/index.module.css
+++ b/nextjs/components/Avatars/index.module.css
@@ -1,6 +1,5 @@
 .group {
   display: flex;
-  flex-wrap: wrap;
   justify-content: left;
   align-items: center;
   min-width: 36px;
